--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,9 @@ description: >- # this means to ignore newlines until "baseurl:"
   MisakaWater Photography
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://photo.misakawater.club" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: 
-github_username: 
-instagram_username: 
+@twitter_username: 
+@github_username: 
+@instagram_username: 
 
 # Build settings
 plugins:
