--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ url: "https://photo.misakawater.club" # the base hostname & protocol for your si
 twitter_username: 
 github_username: 
 instagram_username: 
+weibo_username: 2164388097
 
 # Build settings
 plugins:
